Change court date coulmn name and allow strike out date to be null
Court date - because we might add court date before the actual case
Strike out date - some court outcomes wont have one
